--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="scrolled">
         <div class="container flex">
             <a href="index.html" class="title flex">
-                <img src="IMG/IMG_2432.jpeg" width="47" alt="logo">
+                <img src="IMG/SCOUT TROOP.png" width="47" alt="logo">
                 <h1>Chambo Scout Troop </h1>
             </a>
             <nav class="nav">
@@ -102,7 +102,7 @@
           </p>
         </div>
         <div class="animation two" data-animation-offset="third"> 
-          <a href="#our-activities"><button class="h-button">Explore</button></a>
+          <a href="About.html"><button class="h-button">Explore</button></a>
         </div>
       </div>
     </div>
@@ -239,7 +239,7 @@
     <!-- Logo Section -->
     <div class="footer-logo">
       <a href="index.html">
-        <img src="images/chambo-logo.png" alt="CHAMBO Scout Troop Logo" width="40">
+        <img src="IMG/SCOUT TROOP.png" alt="CHAMBO Scout Troop Logo" width="40">
         <span>CHAMBO Scout Troop Malawi</span>
       </a>
     </div>
