--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
     <header class="scrolled">
         <div class="container flex">
             <a href="index.html" class="title flex">
-                <img src="IMG/IMG_2432.jpeg" width="47" alt="logo">
+                <img src="IMG/SCOUT TROOP.png" width="47" alt="logo">
                 <h1>Chambo Scout Troop </h1>
             </a>
             <nav class="nav">
@@ -66,11 +66,11 @@
                 </div>
                 <ul>
                     <ul class="main-nav">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="About.html">About CHAMBO</a></li>
-  <li><a href="badges.html">Badge Gallery</a></li>
-  <li><a href="patrols.html">Digital Patrols</a></li>
-  <li><a href="projects.html">SDG Projects</a></li>
+<li><a href="index.html">Home</a></li>
+        <li><a href="index.html#our-programs">Programs</a></li>
+        <li><a href="badges.html">Badges</a></li>
+        <li><a href="projects.html">SDG Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
 </ul>
 
                 </ul>
@@ -120,7 +120,7 @@
     <!-- Logo Section -->
     <div class="footer-logo">
       <a href="index.html">
-        <img src="images/chambo-logo.png" alt="CHAMBO Scout Troop Logo" width="40">
+        <img src="IMG/SCOUT TROOP.png" alt="CHAMBO Scout Troop Logo" width="40">
         <span>CHAMBO Scout Troop Malawi</span>
       </a>
     </div>
@@ -130,10 +130,10 @@
       <h4>Explore</h4>
       <ul>
        <li><a href="index.html">Home</a></li>
-  <li><a href="About.html">About CHAMBO</a></li>
-  <li><a href="badges.html">Badge Gallery</a></li>
-  <li><a href="news.html">News</a></li>
-  <li><a href="projects.html">SDG Projects</a></li>
+        <li><a href="index.html#our-programs">Programs</a></li>
+        <li><a href="badges.html">Badges</a></li>
+        <li><a href="projects.html">SDG Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
