--- a/badges.html
+++ b/badges.html
@@ -83,13 +83,11 @@
     
     <main>
 
-
-
 <section id="chambo-badges">
   <div class="container">
     <h2 class="section-heading">CHAMBO Scout Badges</h2>
     <p class="section-intro">
-      Our badges celebrate tradition, service, innovation, and identity. From Cub Scouts to Leaders, each badge reflects a journey of growth, skill, and impact — both offline and online.
+      CHAMBO badges are more than symbols—they're milestones of growth, service, and innovation. Each badge is designed by Scouts, for Scouts, reflecting our journey from Cub to Leader, from bushcraft to robotics, from tradition to transformation.
     </p>
 
     <div class="badge-grid">
@@ -98,7 +96,7 @@
         <img src="images/camping-badge.png" alt="Camping & Bushcraft Badge" class="badge-image">
         <div class="badge-info">
           <h3>Camping & Bushcraft Badge</h3>
-          <p>For Scouts who master outdoor living, tent setup, and survival skills in nature.</p>
+          <p>Earned by Scouts who master outdoor living, tent setup, and survival skills in nature—rooted in Scouting tradition.</p>
         </div>
       </div>
 
@@ -106,7 +104,7 @@
         <img src="images/firemaking-badge.png" alt="Fire-Making Badge" class="badge-image">
         <div class="badge-info">
           <h3>Fire-Making & Survival Badge</h3>
-          <p>Awarded for safe fire-building, emergency prep, and wilderness resilience.</p>
+          <p>Awarded for safe fire-building, emergency readiness, and wilderness resilience—living the Promise under pressure.</p>
         </div>
       </div>
 
@@ -114,7 +112,7 @@
         <img src="images/knot-badge.png" alt="Knot Tying Badge" class="badge-image">
         <div class="badge-info">
           <h3>Knot Tying & Pioneering Badge</h3>
-          <p>Recognizes mastery of knots, lashings, and Scout-built structures.</p>
+          <p>Recognizes Scouts who build with skill—lashings, bridges, and structures that serve and inspire.</p>
         </div>
       </div>
 
@@ -123,7 +121,7 @@
         <img src="images/storytelling-badge.png" alt="Cultural Storytelling Badge" class="badge-image">
         <div class="badge-info">
           <h3>Cultural Storytelling Badge</h3>
-          <p>For Scouts who preserve oral traditions, songs, and local legends.</p>
+          <p>For Scouts who preserve oral traditions, songs, and legends—keeping Malawi’s spirit alive through voice and memory.</p>
         </div>
       </div>
 
@@ -131,7 +129,7 @@
         <img src="images/chichewa-badge.png" alt="Chichewa Language Badge" class="badge-image">
         <div class="badge-info">
           <h3>Chichewa Language Badge</h3>
-          <p>For learning, teaching, or translating in Chichewa — promoting inclusion and pride.</p>
+          <p>Earned by Scouts who learn, teach, or translate in Chichewa—promoting inclusion, pride, and national identity.</p>
         </div>
       </div>
 
@@ -139,7 +137,7 @@
         <img src="images/handcraft-badge.png" alt="Handcraft & Artisan Badge" class="badge-image">
         <div class="badge-info">
           <h3>Handcraft & Artisan Badge</h3>
-          <p>Awarded for creating local crafts — weaving, pottery, beadwork, and more.</p>
+          <p>Awarded for creating local crafts—beadwork, weaving, pottery, and design rooted in heritage and skill.</p>
         </div>
       </div>
 
@@ -148,7 +146,7 @@
         <img src="images/robotics-badge.png" alt="Robotics Explorer Badge" class="badge-image">
         <div class="badge-info">
           <h3>Robotics Explorer Badge</h3>
-          <p>For building or programming basic robots and automation tools.</p>
+          <p>For Scouts who build or program basic robots—exploring automation, creativity, and future-ready thinking.</p>
         </div>
       </div>
 
@@ -156,7 +154,7 @@
         <img src="images/coding-badge.png" alt="Coding & Web Design Badge" class="badge-image">
         <div class="badge-info">
           <h3>Coding & Web Design Badge</h3>
-          <p>Awarded for creating websites, apps, or digital tools that solve real problems.</p>
+          <p>Awarded for creating websites, apps, or digital tools that solve real problems—Scout-led innovation in action.</p>
         </div>
       </div>
 
@@ -164,7 +162,7 @@
         <img src="images/ai-badge.png" alt="AI & Emerging Tech Badge" class="badge-image">
         <div class="badge-info">
           <h3>AI & Emerging Tech Badge</h3>
-          <p>For exploring artificial intelligence, data, and future technologies.</p>
+          <p>For Scouts who explore artificial intelligence, data, and future technologies—leading Malawi into tomorrow.</p>
         </div>
       </div>
 
@@ -173,7 +171,7 @@
         <img src="images/cubstarter-badge.png" alt="Cub Scout Starter Badge" class="badge-image">
         <div class="badge-info">
           <h3>Cub Scout Starter Badge</h3>
-          <p>First badge for new Scouts who complete basic orientation and values.</p>
+          <p>First badge for new Scouts who complete orientation, learn the Law, and begin their journey with pride.</p>
         </div>
       </div>
 
@@ -181,7 +179,7 @@
         <img src="images/patrol-leader.png" alt="Patrol Leader Badge" class="badge-image">
         <div class="badge-info">
           <h3>Patrol Leader Badge</h3>
-          <p>For Scouts who lead small teams and organize troop activities.</p>
+          <p>For Scouts who lead small teams, organize troop activities, and model servant leadership in action.</p>
         </div>
       </div>
 
@@ -189,7 +187,7 @@
         <img src="images/global-exchange.png" alt="Global Exchange Badge" class="badge-image">
         <div class="badge-info">
           <h3>Global Exchange Badge</h3>
-          <p>For Scouts who collaborate with international troops or join global events.</p>
+          <p>Earned by Scouts who collaborate with international Troops, join global events, and build friendships across borders.</p>
         </div>
       </div>
     </div>
@@ -199,15 +197,16 @@
     </div>
   </div>
 </section>
+
 <section id="badge-exchange">
   <div class="container">
     <h2 class="section-heading">Beyond the Badge</h2>
     <p class="section-intro">
-      CHAMBO Scout Badges are more than symbols — they’re stories of courage, creativity, and community. Whether you’re a Scout in Malawi or across the globe, we invite you to share your journey, exchange ideas, and celebrate the skills that unite us.
+      CHAMBO Scout Badges carry legacy. They honor the hands that build, the voices that lead, and the minds that imagine. Whether you’re a Scout in Malawi or a friend across the globe, we invite you to exchange badge stories, co-create new ones, and celebrate the skills that unite us.
     </p>
 
     <p class="section-intro">
-      From traditional bushcraft to robotics, from Chichewa storytelling to global digital leadership — our badge system reflects the full spectrum of Scouting today. And we’re just getting started.
+      From traditional bushcraft to digital innovation, our badge system is Scout-led, Troop-designed, and always evolving. Join us in shaping the next chapter of Scouting—one badge, one story, one Scout at a time.
     </p>
 
     <div class="badge-button-wrapper" style="text-align: center; margin-top: 30px;">
@@ -217,11 +216,6 @@
     </div>
   </div>
 </section>
-
-
-
-
-
 
 <footer>
   <div class="footer-container">
