--- a/projects.html
+++ b/projects.html
@@ -89,19 +89,41 @@
   <div class="container">
 <section id="sdg-projects">
   <div class="container">
-    <h2 class="section-heading">CHAMBO & the SDGs</h2>
+    <h2 class="section-heading">CHAMBO SCOUT TROOP MALAWI & the SDGs</h2>
     <p class="invite-text">
-      CHAMBO Scout Troop Malawi is driving youth-led action across the Sustainable Development Goals (SDGs). From clean water patrols to digital literacy campaigns, our Scouts are turning global goals into local impact.
-    </p>
-    <p class="invite-text">
-      We focus on SDG 6 (Clean Water & Sanitation), SDG 13 (Climate Action), SDG 4 (Quality Education), and SDG 17 (Partnerships for the Goals). Our patrols map water sources, teach sanitation, promote digital skills, and build bridges with changemakers across Malawi and beyond.
-    </p>
-    <p class="invite-text">
-      Whether you're a Scout troop, youth organization, school, or NGO — we invite you to collaborate on SDG-aligned projects. Your support helps us scale our impact, empower more youth, and preserve both tradition and innovation.
-    </p>
-    <div class="invite-buttons">
-      <a href="contact.html" class="invite-button">Join an SDG Project</a>
-      <a href="donate.html" class="invite-button">Fuel Youth-Led Impact</a>
+  We are CHAMBO Scout Troop Malawi young leaders taking real action on the Sustainable Development Goals (SDGs). From clean water patrols to digital literacy missions, we’re turning global goals into local impact, one project at a time.
+</p>
+<p class="invite-text">
+  Our focus is clear: SDG 6 (Clean Water & Sanitation), SDG 13 (Climate Action), SDG 4 (Quality Education), and SDG 17 (Partnerships for the Goals). We map water sources, teach hygiene, run coding workshops, and connect with changemakers across Malawi and beyond all led by Scouts, not offices.
+</p>
+<p class="invite-text">
+  If you're a fellow Scout troop, youth group, school, or NGO we’d love to team up. Your support helps us grow our patrols, reach more communities, and keep blending tradition with innovation. Let’s build something powerful together.
+</p>
+
+   <div class="invite-buttons">
+     <div class="invite-buttons">
+  <a 
+    href="mailto:chamboscouttroop@gmail.com?cc=josephpeterkamvabingu@gmail.com&subject=Join%20an%20SDG%20Project&body=Hello%20CHAMBO%20Troop%2C%0A%0AI%20would%20like%20to%20join%20your%20SDG%20project.%20Please%20share%20more%20details%20on%20how%20I%20can%20get%20involved.%0A%0AThank%20you." 
+    class="invite-button"
+  >
+    Join an SDG Project
+  </a>
+
+  <a 
+    href="mailto:chamboscouttroop@gmail.com?cc=josephpeterkamvabingu@gmail.com&subject=Fuel%20Youth-Led%20Impact&body=Hello%20CHAMBO%20Troop%2C%0A%0AI%20am%20interested%20in%20supporting%20your%20youth-led%20SDG%20projects.%20Please%20share%20funding%20options%20and%20impact%20details.%0A%0ARegards." 
+    class="invite-button"
+  >
+    Fuel Youth-Led Impact
+  </a>
+
+  <a 
+    href="mailto:chamboscouttroop@gmail.com?cc=josephpeterkamvabingu@gmail.com&subject=Become%20a%20Funding%20Partner&body=Dear%20CHAMBO%20Scout%20Troop%2C%0A%0AI%20would%20like%20to%20explore%20partnership%20opportunities%20to%20support%20your%20SDG-aligned%20initiatives.%20Please%20send%20me%20your%20proposal%20or%20partnership%20deck.%0A%0ABest%20regards." 
+    class="invite-button"
+  >
+    Become a Funding Partner
+  </a>
+</div>
+
     </div>
   </div>
 </section>
