--- a/contact.html
+++ b/contact.html
@@ -108,14 +108,13 @@
 </section>
 
 
-       
 <footer>
   <div class="footer-container">
     <!-- Logo Section -->
     <div class="footer-logo">
       <a href="index.html">
         <img src="IMG/SCOUT TROOP.png" alt="CHAMBO Scout Troop Logo" width="40">
-        <span>CHAMBO Scout Troop Malawi</span>
+        <span>Chambo Scout Troop </span>
       </a>
     </div>
 
@@ -123,11 +122,13 @@
     <div class="footer-links">
       <h4>Explore</h4>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#our-programs">Programs</a></li>
-        <li><a href="badges.html">Badges</a></li>
-        <li><a href="projects.html">SDG Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+         <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="About.html">About Our Troop</a></li>
+                        <li><a href="badges.html">Badge Gallery</a></li>
+                        <li><a href="news.html">Troop News</a></li>
+                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
       </ul>
     </div>
 
