--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
         <div class="container flex">
             <a href="index.html" class="title flex">
                 <img src="IMG/SCOUT TROOP.png" width="47" alt="CHAMBO Troop Logo">
-                <h1>CHAMBO Scout Troop</h1>
+                <h1>Chambo Scout Troop</h1>
             </a>
             <nav class="nav">
                 <div class="navbar">
@@ -179,14 +179,13 @@
 </main>
 
 
-
 <footer>
   <div class="footer-container">
     <!-- Logo Section -->
     <div class="footer-logo">
       <a href="index.html">
-        <img src="images/chambo-logo.png" alt="CHAMBO Scout Troop Logo" width="40">
-        <span>CHAMBO Scout Troop Malawi</span>
+        <img src="IMG/SCOUT TROOP.png" alt="CHAMBO Scout Troop Logo" width="40">
+        <span>Chambo Scout Troop Malawi</span>
       </a>
     </div>
 
@@ -194,11 +193,13 @@
     <div class="footer-links">
       <h4>Explore</h4>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#our-programs">Programs</a></li>
-        <li><a href="badges.html">Badges</a></li>
-        <li><a href="projects.html">SDG Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+         <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="About.html">About Our Troop</a></li>
+                        <li><a href="badges.html">Badge Gallery</a></li>
+                        <li><a href="news.html">Troop News</a></li>
+                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
       </ul>
     </div>
 
