--- a/news.html
+++ b/news.html
@@ -131,10 +131,6 @@
    
 
 
-
-
-
-
 <footer>
   <div class="footer-container">
     <!-- Logo Section -->
@@ -149,11 +145,13 @@
     <div class="footer-links">
       <h4>Explore</h4>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#our-programs">Programs</a></li>
-        <li><a href="badges.html">Badges</a></li>
-        <li><a href="projects.html">SDG Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+         <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="About.html">About Our Troop</a></li>
+                        <li><a href="badges.html">Badge Gallery</a></li>
+                        <li><a href="news.html">Troop News</a></li>
+                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
       </ul>
     </div>
 
