--- a/About.html
+++ b/About.html
@@ -66,11 +66,13 @@
                 </div>
                 <ul>
                     <ul class="main-nav">
-                        <li><a href="index.html">Home</a></li>
+                       <li><a href="index.html">Home</a></li>
                         <li><a href="About.html">About Our Troop</a></li>
                         <li><a href="badges.html">Badge Gallery</a></li>
                         <li><a href="news.html">Troop News</a></li>
-                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
                     </ul>
                 </ul>
             </nav>
@@ -194,12 +196,13 @@
       <h4>Explore</h4>
       <ul>
          <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                         <li><a href="About.html">About Our Troop</a></li>
                         <li><a href="badges.html">Badge Gallery</a></li>
                         <li><a href="news.html">Troop News</a></li>
-                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
       </ul>
     </div>
 
