--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                         <li><a href="About.html">About Our Troop</a></li>
                         <li><a href="badges.html">Badge Gallery</a></li>
                         <li><a href="news.html">Troop News</a></li>
-                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
                     </ul>
                 </ul>
             </nav>
@@ -86,24 +87,26 @@
 
   <section id="hero-banner">
     <div class="container">
-      <div class="h-text">
-        <div class="content">
-          <div class="animation one" data-animation-offset="first"> 
-            <h1 class="h-title">CHAMBO Scout Troop Malawi</h1>
-            <p class="hero-subtext">
-              Malawi’s first Scout Troop to launch a digital-first platform leading with patrols, badge innovation, and youth-led SDG action.
-            </p>
-          </div>
-          <div class="animation two" data-animation-offset="second"> 
-            <p class="about-text">
-              Founded and led by Troop Leader Joseph Peter Kamvabingu (SKIP), CHAMBO is a registered Troop under SAM. We proudly blend Scouting tradition with digital transformation setting the pace for Troop-level innovation across Malawi.
-            </p>
-          </div>
-          <div class="animation two" data-animation-offset="third"> 
-            <a href="About.html"><button class="h-button">Explore Our Troop</button></a>
-          </div>
-        </div>
+  <div class="h-text">
+    <div class="content">
+      <div class="animation one" data-animation-offset="first"> 
+        <h1 class="h-title">CHAMBO Scout Troop Malawi</h1>
+        <p class="hero-subtext">
+          A new chapter in Scouting — where tradition meets technology to empower young people, strengthen patrols, and take action for a better Malawi.
+        </p>
       </div>
+      <div class="animation two" data-animation-offset="second"> 
+        <p class="about-text">
+          As a registered Troop under the Scout Association of Malawi, CHAMBO is led by a dedicated team of youth and mentors. Together, we champion skills for life, community service, and SDG‑driven projects — building a legacy for the next generation of Scouts.
+        </p>
+      </div>
+      <div class="animation two" data-animation-offset="third"> 
+        <a href="About.html"><button class="h-button">Explore Our Troop</button></a>
+      </div>
+    </div>
+  </div>
+</div>
+
 
       <div class="nav-media">
         <div class="icons">
