--- a/projects.html
+++ b/projects.html
@@ -67,10 +67,13 @@
                 <ul>
                     <ul class="main-nav">
 <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#our-programs">Programs</a></li>
-        <li><a href="badges.html">Badges</a></li>
-        <li><a href="projects.html">SDG Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+       <li><a href="index.html">Home</a></li>
+                        <li><a href="About.html">About Our Troop</a></li>
+                        <li><a href="badges.html">Badge Gallery</a></li>
+                        <li><a href="news.html">Troop News</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
 </ul>
 
                 </ul>
@@ -155,8 +158,9 @@
                         <li><a href="About.html">About Our Troop</a></li>
                         <li><a href="badges.html">Badge Gallery</a></li>
                         <li><a href="news.html">Troop News</a></li>
-                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
       </ul>
     </div>
 
