--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,12 @@
                 <ul>
                     <ul class="main-nav">
 <li><a href="index.html">Home</a></li>
-  <li><a href="About.html">About CHAMBO</a></li>
-  <li><a href="badges.html">Badge Gallery</a></li>
-  <li><a href="news.html">News</a></li>
-  <li><a href="projects.html">SDG Projects</a></li>
-    <li><a href="team.html">Our Team</a></li>
+                        <li><a href="About.html">About Our Troop</a></li>
+                        <li><a href="badges.html">Badge Gallery</a></li>
+                        <li><a href="news.html">Troop News</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
 
 </ul>
 
@@ -127,8 +128,9 @@
                         <li><a href="About.html">About Our Troop</a></li>
                         <li><a href="badges.html">Badge Gallery</a></li>
                         <li><a href="news.html">Troop News</a></li>
-                        <li><a href="projects.html">Scout-Led SDG Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="team.html">Our Team</a></li>
+                         <li><a href="download.html">Downloads</a></li>
       </ul>
     </div>
 
