--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <div class="animation one" data-animation-offset="first"> 
         <h1 class="h-title">CHAMBO Scout Troop Malawi</h1>
         <p class="hero-subtext">
-          A new chapter in Scouting — where tradition meets technology to empower young people, strengthen patrols, and take action for a better Malawi.
+          A new chapter in Scouting  where tradition meets technology to empower young people, strengthen patrols, and take action for a better Malawi.
         </p>
       </div>
       <div class="animation two" data-animation-offset="second"> 
         <p class="about-text">
-          As a registered Troop under the Scout Association of Malawi, CHAMBO is led by a dedicated team of youth and mentors. Together, we champion skills for life, community service, and SDG‑driven projects — building a legacy for the next generation of Scouts.
+          As a registered Troop under the Scout Association of Malawi, CHAMBO is led by a dedicated team of youth and mentors. Together, we champion skills for life, community service, and SDG‑driven projects building a legacy for the next generation of Scouts.
         </p>
       </div>
       <div class="animation two" data-animation-offset="third"> 
