--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </p>
       </div>
       <div class="animation two" data-animation-offset="third"> 
-        <a href="About.html"><button class="h-button">Explore Our Troop</button></a>
+        <a href="About.html"><button class="h-button">Explore</button></a>
       </div>
     </div>
   </div>
